# rvIRC

./: Cargo.toml  README.md
docs/: index.html
src/: app.rs  commands.rs  config.rs  connection.rs  crypto.rs  events.rs  filetransfer.rs  format.rs  friends.rs  highlight.rs  main.rs  notifications.rs  read_markers.rs  sts.rs
src/ui/: layout.rs  mod.rs
