[package]
name = "rvirc"
version = "0.1.0"
edition = "2021"
description = "Rust + VIM + IRC - terminal IRC client with vim-style commands"
authors = ["rvIRC"]
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
irc = { version = "1.1", default-features = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
futures-util = "0.3"
unicode-width = "0.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
magic-wormhole = "0.7"
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ureq = "2"
